downgraded to java 1.8
Signed-off-by: Juergen Albert <j.albert@data-in-motion.biz>