@@ -66,7 +66,7 @@ public class GeckoMongoDatabaseImpl extends AbstractMongoDatabase implements Mon
 
 	@Override
 	public String getAlias() {
-		return config.alias() != null && config.alias().isBlank() ? config.alias() : config.name();
+		return config.alias() != null && config.alias().trim().isEmpty() ? config.alias() : config.name();
 	}
 
 	@Override
